# inbox-companion

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  env_example.env
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  imap_preview.py
backend/src/inbox_backend/app/: config.py  db.py  imap_preview.py  llm_client.py  main.py  models.py  poller.py  providers.py  repository.py
config/: accounts_example.json
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts
tools/api_surface/: py_api.py  ts_api.mjs
tools/repo_view/: snapshot.sh
