# backend/pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-backend"
version = "0.2.1"
description = "Inbox Companion backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "beautifulsoup4>=4.12",
  "imapclient>=3.0",
  "SQLAlchemy>=2.0",
  "APScheduler>=3.10",
  "httpx>=0.27.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["inbox_backend*"]

